--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -15,6 +15,84 @@
       margin-top: 0;
     }
 
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+
+    .icon-btn {
+      width: 32px;
+      height: 32px;
+      background: #f5f5f5;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon-btn:hover {
+      background: #e0e0e0;
+    }
+
+    #currentPage {
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 10px;
+      margin-bottom: 15px;
+    }
+
+    #favicon {
+      margin-right: 10px;
+    }
+
+    #pageTitle {
+      font-weight: bold;
+      font-size: 14px;
+      margin-bottom: 4px;
+    }
+
+    #pageUrl {
+      font-size: 12px;
+      color: #666;
+      word-break: break-all;
+    }
+
+    .primary-btn {
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    .primary-btn:hover {
+      background: #45a049;
+    }
+
+    .primary-btn:disabled {
+      background: #cccccc;
+      cursor: not-allowed;
+    }
+
+    #mainStatus {
+      margin-top: 10px;
+      font-size: 12px;
+      min-height: 1.2em;
+      color: #333;
+    }
+
     .form-group {
       margin-bottom: 12px;
     }
@@ -35,7 +113,7 @@
       border-radius: 4px;
     }
 
-    button {
+    button:not(.icon-btn):not(.primary-btn) {
       width: 100%;
       padding: 10px;
       background: #7b3cad;
@@ -46,7 +124,7 @@
       font-weight: bold;
     }
 
-    button:hover {
+    button:not(.icon-btn):not(.primary-btn):hover {
       background: #602a8c;
     }
 
@@ -68,9 +146,33 @@
 </head>
 
 <body>
-  <h2>Settings</h2>
+  <!-- Main Screen -->
+  <div id="mainScreen" style="display: block;">
+    <div class="header">
+      <h2>Smart History</h2>
+      <button id="menuBtn" class="icon-btn">☰</button>
+    </div>
 
-  <div class="form-group">
+    <div id="currentPage">
+      <img id="favicon" src="" width="16" height="16" alt="">
+      <div id="pageInfo">
+        <div id="pageTitle">Loading...</div>
+        <div id="pageUrl">...</div>
+      </div>
+    </div>
+
+    <button id="recordBtn" class="primary-btn">📝 今すぐ記録</button>
+    <div id="mainStatus"></div>
+  </div>
+
+  <!-- Settings Screen -->
+  <div id="settingsScreen" style="display: none;">
+    <div class="header">
+      <button id="backBtn" class="icon-btn">←</button>
+      <h2>Settings</h2>
+    </div>
+
+    <div class="form-group">
     <label>Obsidian API Key</label>
     <input type="password" id="apiKey" placeholder="Paste your key here...">
   </div>
@@ -160,9 +262,12 @@
     <input type="number" id="minScrollDepth" min="0" max="100" value="50">
   </div>
 
-  <button id="save">Save & Test Connection</button>
-  <div id="status"></div>
+    <button id="save">Save & Test Connection</button>
+    <div id="status"></div>
+  </div>
 
+  <script type="module" src="navigation.js"></script>
+  <script type="module" src="main.js"></script>
   <script type="module" src="popup.js"></script>
 </body>
 
