feat: 設定画面のデフォルトタブをドメインフィルターに変更
ハンバーガーメニューから設定画面を開いたとき、「ドメインフィルター」タブがデフォルトで表示されるように変更。

変更内容:
- popup.html で active クラスとdisplay スタイルを入れ替え
- 「一般」タブから active クラスを削除 → 「ドメインフィルター」タブに移動
- 既存のタブ切り替え機能はそのまま動作

ユーザーは引き続き「一般」タブをクリックして一般設定にアクセス可能。

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -256,12 +256,12 @@
 
     <!-- Tab Navigation -->
     <div class="tab-nav">
-      <button id="generalTab" class="tab-btn active">一般</button>
-      <button id="domainTab" class="tab-btn">ドメインフィルター</button>
+      <button id="generalTab" class="tab-btn">一般</button>
+      <button id="domainTab" class="tab-btn active">ドメインフィルター</button>
     </div>
 
     <!-- General Settings Panel -->
-    <div id="generalPanel" class="tab-panel active">
+    <div id="generalPanel" class="tab-panel" style="display: none;">
 
     <div class="form-group">
     <label>Obsidian API Key</label>
@@ -358,7 +358,7 @@
     </div>
 
     <!-- Domain Filter Panel -->
-    <div id="domainPanel" class="tab-panel" style="display: none;">
+    <div id="domainPanel" class="tab-panel active">
       <div class="form-group">
         <label>ドメインフィルターモード</label>
         <div class="radio-group">
