--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -239,6 +239,53 @@
       z-index: 1000;
     }
 
+    /* フォーマットセクション */
+    .format-section {
+      display: block;
+    }
+
+    .format-section[style*="display: none"] {
+      display: none;
+    }
+
+    /* ドロップゾーン */
+    .drop-zone {
+      border: 2px dashed #ccc;
+      border-radius: 4px;
+      padding: 20px;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    .drop-zone.active {
+      border-color: #4CAF50;
+      background-color: rgba(76, 175, 80, 0.1);
+    }
+
+    /* プレビューセクション */
+    .preview-section {
+      background-color: #f5f5f5;
+      padding: 10px;
+      border-radius: 4px;
+      margin-top: 10px;
+    }
+
+    .preview-section h4 {
+      margin-top: 0;
+      margin-bottom: 10px;
+      font-size: 14px;
+    }
+
+    .error {
+      color: red;
+    }
+
+    .error-text {
+      color: #d9534f;
+      max-height: 100px;
+      overflow-y: auto;
+    }
+
     .modal-content {
       background: white;
       width: 90%;
@@ -504,17 +551,75 @@
         </div>
       </div>
 
-      <div id="domainListSection">
+      <!-- フィルター形式選択 -->
+      <div class="form-group">
+        <label>フィルター形式</label>
+        <select id="filterFormat">
+          <option value="simple">シンプル (1行1ドメイン)</option>
+          <option value="ublock">uBlock Origin 形式</option>
+        </select>
+      </div>
+
+      <!-- simple形式用UI（既存） -->
+      <div id="simpleFormatUI" class="format-section">
+        <div id="domainListSection">
+          <div class="form-group">
+            <label id="domainListLabel">ドメインリスト (1行に1ドメイン)</label>
+            <textarea id="domainList" rows="8" placeholder="example.com&#10;*.example.org&#10;company.net"></textarea>
+            <div class="help-text">
+              ワイルドカードも使用できます (例: *.example.com)
+            </div>
+          </div>
+
+          <div class="form-group">
+            <button id="addCurrentDomain" class="secondary-btn">現在のページドメインを追加</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- uBlock形式用UI（新規） -->
+      <div id="uBlockFormatUI" class="format-section" style="display: none;">
         <div class="form-group">
-          <label id="domainListLabel">ドメインリスト (1行に1ドメイン)</label>
-          <textarea id="domainList" rows="8" placeholder="example.com&#10;*.example.org&#10;company.net"></textarea>
+          <label>uBlockフィルター</label>
+          <textarea id="uBlockFilterInput" rows="8"
+            placeholder="||example.com^&#10;@@||trusted.com^&#10;||*.ads.net^$3p&#10;! Comment line"></textarea>
           <div class="help-text">
-            ワイルドカードも使用できます (例: *.example.com)
+            uBlock Origin形式のフィルターを貼り付け<br>
+            サポート: ||hostname^, @@||hostname^, *, !Comments, $domain=, $3p, $1p
           </div>
         </div>
 
         <div class="form-group">
-          <button id="addCurrentDomain" class="secondary-btn">現在のページドメインを追加</button>
+          <label>ファイルから読み込み (.txt)</label>
+          <input type="file" id="uBlockFileInput" accept=".txt" style="display: none;">
+          <button id="uBlockFileSelectBtn" class="secondary-btn">ファイルを選択</button>
+        </div>
+
+        <!-- ドラッグ&ドロップエリア -->
+        <div id="uBlockDropZone" class="drop-zone" style="display: none;">
+          <p>ファイルをここにドロップ</p>
+        </div>
+
+        <!-- URLインポート -->
+        <div class="form-group">
+          <label>URLから読み込み</label>
+          <input type="url" id="uBlockUrlInput" placeholder="https://example.com/filters.txt">
+          <button id="uBlockUrlImportBtn" class="secondary-btn">URLからインポート</button>
+        </div>
+
+        <!-- プレビューセクション -->
+        <div id="uBlockPreview" class="preview-section" style="display: none;">
+          <h4>読み込みプレビュー</h4>
+          <p>ルール数: <span id="uBlockRuleCount">0</span></p>
+          <p>例外数: <span id="uBlockExceptionCount">0</span></p>
+          <p>エラー: <span id="uBlockErrorCount" class="error">0</span></p>
+          <p id="uBlockErrorDetails" class="error-text" style="font-size: 11px;"></p>
+        </div>
+
+        <!-- エクスポートボタン -->
+        <div class="form-group">
+          <button id="uBlockExportBtn" class="secondary-btn">エクスポート</button>
+          <button id="uBlockCopyBtn" class="secondary-btn">クリップボードにコピー</button>
         </div>
       </div>
 
