feat: Add reload button to uBlock filter sources for refreshing rules and updating status.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -316,6 +316,26 @@
       background-color: #d32f2f;
     }
 
+    .source-item .reload-btn {
+      background-color: #2196F3;
+      color: white;
+      border: none;
+      padding: 3px 8px;
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 11px;
+      margin-right: 5px;
+    }
+
+    .source-item .reload-btn:hover {
+      background-color: #1976D2;
+    }
+
+    .source-item .reload-btn:disabled {
+      background-color: #90CAF9;
+      cursor: wait;
+    }
+
     .no-sources {
       color: #999;
       font-style: italic;
