--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -321,7 +321,7 @@
   </div>
 
   <!-- Confirmation Modal -->
-  <div id="confirmationModal" class="modal-overlay">
+  <div id="confirmationModal" class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="confirmContent">
     <div class="modal-content">
       <div class="modal-header">
         <h3 data-i18n="confirmContent">Review Content</h3>
